# speeds

./: .gitignore  README.md  pyproject.toml
speeds/: speeds.py
speeds/templates/: index.html
tests/: test_speeds.py
