[tool.poetry]
name = "speeds"
version = "0.1.3"
description = "A small program for graphing cable modem speeds"
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
jsonlines = "^2.0.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
